  editing to correct visual differences between placed main-layer mobile
  objects in edit mode and those that have already been moved into the mobile
  layer by check-in.

--Moved vertically oriented animal sprites up to avoid having them stick out
  under the feet of family members that are standing on the same tile.  Their
  positions relative to other objects look better now in general.





Version 27   2013-December-27

--Tweaked visibility object fades to only fade objects that are fully-obscured
  (like completely behind walls or doors) and not objects that are peeking out
  from behind corners.  This eliminates jarring object pop-in and other weird
  side-effects while still solving the original motivating problem:  vision
  through a single layer of solid walls is blocked (thanks Joshua Collins).




Version 26   2013-December-25

--Fixed newly-broken visibility toggle in tape playback.  Also, improved the
  way view jump-back looks when visibility shroud turned back on after panning
  around the house in a paused tape.

--Improved orientation of vault when it is surrounded by a mix of wall and
  structural tiles so that it faces out through the non-wall tiles.

--Gave pits the 'wall' and 'structural' properties so that other objects orient
  themselves around them (for example, a vault surrounded by three pits will
  face the opening).

--Fixed so that family objects along bottom overhang row have proper dark
  outlines.

--Fixed so that non-wall objects don't appear in the bottom overhang row during
  robbery (which would give their off-screen location away, even though they
  are not actually visible)

--Finally dealt with the "see through one wall" issue by fading out invisible
  objects under the shroud to transparent.  Now a single thickness of walls
  fully obscures what's behind it, no matter what monitor gamma settings are
  used.





Version 25   Live Server Fixes

--Added work-around for rare MySQL lock wait timeout issue (assuming that some